--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "firebase": "^8.5.0",
     "firebase-admin": "^9.7.0",
-    "nuxt": "^2.15.6"
+    "hchs-vue-charts": "^1.2.8",
+    "nuxt": "^2.15.6",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
