--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "pingo-admin",
-  "version": "1.0.0",
-  "private": true,
-  "author": "Alan Sha Salim",
   "scripts": {
+    "layer0:dev": "layer0 dev",
+    "layer0:build": "layer0 build",
+    "layer0:deploy": "layer0 deploy",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "heroku-postbuild": "npm run build"
-  }, 
+  },
+  "name": "pingo-admin",
+  "version": "1.0.0",
+  "private": true,
+  "author": "Alan Sha Salim",
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxt/core": "^2.15.6"
+  },
+  "devDependencies": {
+    "@layer0/cli": "^3.13.3",
+    "@layer0/core": "^3.13.3",
+    "@layer0/devtools": "^3.13.3",
+    "@layer0/nuxt": "^3.13.3",
+    "@layer0/prefetch": "^3.13.3",
+    "@layer0/vue": "^3.13.3",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "fibers": "^5.0.0",
+    "node-sass": "^6.0.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.2.0",
+    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/firebase": "^7.5.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "firebase": "^8.5.0",
@@ -22,12 +39,5 @@
     "hchs-vue-charts": "^1.2.8",
     "nuxt": "^2.15.6",
     "vue-chartjs": "^3.5.1"
-  },
-  "devDependencies": {
-    "@nuxtjs/style-resources": "^1.0.0",
-    "fibers": "^5.0.0",
-    "node-sass": "^6.0.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.2.0"
   }
 }
